cmake_minimum_required(VERSION 3.11)
project(monobo CXX C)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include(CTest)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
include(monobo_deps)

if (MSVC)
  add_compile_options(/W4 /WX)
else ()
  add_compile_options(-Wall -Wextra -pedantic -Werror -Wno-unused-parameter)
endif ()

option(MONOBO_WITH_CIS "Build cis subproject" ON)
option(MONOBO_WITH_CLI_ARGS "Build cli_args subproject" ON)
option(MONOBO_WITH_CJSON "Build constexpr_json subproject" ON)
option(MONOBO_WITH_JSON_SCHEMA "Build json_schema subproject" ON)

if (MONOBO_WITH_CIS)
  add_subdirectory(cis)
endif()
if (MONOBO_WITH_CLI_ARGS)
  add_subdirectory(cli_args)
endif()
if (MONOBO_WITH_CJSON)
  add_subdirectory(constexpr_json)
endif()
if (MONOBO_WITH_JSON_SCHEMA)
  add_subdirectory(json_schema)
endif()
